--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
     <img src="media/images/icons-15.png">
     <div class="popup" onclick="showPopup('popup-03')">events
         <span class="popuptext" id="popup-03">
-            <img src="media/images/popup-03.png" alt="Popup Image">
+            <img src="media/images/events.png" alt="Popup Image">
         </span>
     </div>
 </div> 
   
   <div class="icon">
       <img src="media/images/icons-18.png">
-      <div class="popup" onclick="showPopup()">archive
-        <span class="popuptext" id="myPopup">
-             <img src="media/images/pop.png" alt="Popup Image">
+      <div class="popup" onclick="showPopup('popup-04')">archive
+        <span class="popuptext" id="popup-04">
+             <img src="media/images/archive.png" alt="Popup Image"
         </span></div>
       </div> 
  
@@ -137,6 +137,8 @@
             var popup = document.getElementById(popupId);
             popup.classList.toggle("show");
         }
+
+        src = "grained.js"
 
 
         </script>
