--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 
  
  <div class="flex-container1">
-  <div id="home">home</div> 
+  <!-- <div id="home">home</div>  -->
 
   <div class="icon">
     <img src="media/images/icons-16.png">
-    <div class="popup" onclick="showPopup('popup-05')">blog
+    <!-- <div class="popup" onclick="showPopup('popup-05')">blog
         <span class="popuptext" id="popup-05">
             <img src="media/images/popup-05.png" alt="Popup Image">
         </span>
-    </div>
+    </div> -->
 </div>
 
 <div class="icon">
@@ -86,10 +86,11 @@
   
   <div class="icon">
       <img src="media/images/icons-18.png">
-      <div class="popup" onclick="showPopup('popup-04')">archive
+     <div class="popup" onclick="showPopup('popup-04')">archive
         <span class="popuptext" id="popup-04">
              <img src="media/images/archive.png" alt="Popup Image"
-        </span></div>
+        </span>
+      </div> 
       </div> 
  
  
@@ -100,12 +101,14 @@
               <img src="media/images/popup1.png" alt="Popup Image">
           </span></div>
         </div> 
+        </div>
 
    
 
 
-  <div id="about">about</div>
-  </div>
+  <!-- <div id="about">links</div> -->
+  <!-- <a href="../html/blog.html"id="about">links</a>
+  </div> -->
 
 
     <div class="flex-container">
@@ -114,19 +117,20 @@
     <h1 id="hello">DESIGN FORUM.</h1>
    </div>
     <div id="three-body"></div> 
-
+</div>
     
-   
+   <div class="flex-container2">
     <h2>a graphic design community</h2>
+
     <h3>for designers, by designers</h3>
- 
+</div>
 
-
+<!-- 
     <div class="flex-container2">
-      <div id="blog">blog</div>
+      <div id="blog">about</div>
       <div id="contact">contact</div>
 
-      </div>
+      </div> -->
 
 
 
