--- a/html/archive.html
+++ b/html/archive.html
@@ -66,29 +66,24 @@
   </div>
    
 
- 
+  <div class="flexbox">
+    <div class="flex-container">
+    <h1 id="hello">DESIGN FORUM</h1>
 
-<h1>archive</h1>
-
-
-
-
-      <script>
-        // When the user clicks on <div>, open the popup
-          function showPopup(popupId) {
-            var popup = document.getElementById(popupId);
-            popup.classList.toggle("show");
-        }
-
-        src = "grained.js"
+   <div id="three-body"></div> 
+  
+</div>
+</div>
 
 
-        </script>
+
+
+   
 
 
 
     
-    <script src="js/script.js" type="module"></script>
-    <script src="js/main.js" type="module"></script>
+    <script src="../js/script.js" type="module"></script>
+    <script src="../js/main.js" type="module"></script>
 </body>
 </html>
