--- a/html/blog.html
+++ b/html/blog.html
@@ -41,6 +41,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9+Charted&family=Major+Mono+Display&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9+Charted&family=Major+Mono+Display&family=Pinyon+Script&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
 
 
    <script type="importmap">
@@ -67,7 +70,12 @@
    
   <div class="parent-container">
     <div class="flex-container">
-        <div class="flex-item">Item 1</div>
+        <div class="header"> 
+          <div id="title">Blog</div>
+
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </div>
         <div class="flex-item">Item 2</div>
         <div class="flex-item">Item 3</div>
     </div>
@@ -81,7 +89,13 @@
 
 
 
+<div class="flex-container3">
+  <a href="../index.html" id="home">home</a>
 
+  
+
+  
+</div>
 
 
 
