--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 </head>
 <body>
    
-  <!-- <style>
+  <style>
     body {
       background-image: url('media/images/gradient-grain.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
     }
-    </style> -->
+    </style>
 
 
  <div class="flex-container3">
