--- a/html/archive.html
+++ b/html/archive.html
@@ -41,6 +41,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9+Charted&family=Major+Mono+Display&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
 
 
    <script type="importmap">
@@ -55,6 +58,13 @@
 </head>
 <body>
 
+  <style>
+    body {
+      background-color: #C8EAE7;
+    }
+    </style>
+
+
   <div class="flex-container3">
     <a href="../html/archive.html" id="archive">archive</a>
   
@@ -68,9 +78,11 @@
 
   <div class="flexbox">
     <div class="flex-container">
-    <h1 id="hello">DESIGN FORUM</h1>
+    <h1 id="hello">It's all up to you!</h1>
 
    <div id="three-body"></div> 
+
+   <h2>Remember that</h2>
   
 </div>
 </div>
@@ -84,6 +96,6 @@
 
     
     <script src="../js/script.js" type="module"></script>
-    <script src="../js/main.js" type="module"></script>
+    <!-- <script src="../js/main.js" type="module"></script> -->
 </body>
 </html>
