--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
     
-    <script src="js/script.js" type="module"></script>
+    <!-- <script src="js/script.js" type="module"></script> -->
     <script src="js/main.js" type="module"></script>
 </body>
 </html>
