--- a/html/archive.html
+++ b/html/archive.html
@@ -79,12 +79,27 @@
   <div class="flexbox">
     <div class="flex-container">
     <h1 id="hello">It's all up to you!</h1>
+    <div id="square"></div>
 
    <div id="three-body"></div> 
 
-   <h2>Remember that</h2>
+   <h2>Just remember that</h2>
+
+   <div id="square1"></div>
+   <div id="square2"></div>
+   <div id="square3"></div>
+   <div id="square4"></div>
+   <div id="square5"></div>
   
 </div>
+
+<div class="flex-container2">
+  <h3>even if you wish you were someone else...</h3>
+  <br>
+  <h3>you can still move th CD with your mouse</h3>
+</div>
+
+
 </div>
 
 
