--- a/html/archive.html
+++ b/html/archive.html
@@ -66,7 +66,7 @@
 
 
   <div class="flex-container3">
-    <a href="../html/archive.html" id="archive">archive</a>
+    <a href="../index.html" id="archive">home</a>
   
     <a href="../html/about.html" id="about">about</a>
   
@@ -100,7 +100,11 @@
 </div>
 
 
+
+
 </div>
+
+
 
 
 
