--- a/index.html
+++ b/index.html
@@ -57,15 +57,12 @@
 
 </head>
 <body>
-   
   <style>
     body {
-      background-image: url('media/images/gradient-grain.png');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
+      background-color: #f5d9c6;
     }
-    </style>
+    </style> 
+
 
 
  <div class="flex-container3">
@@ -79,11 +76,36 @@
 </div>
  
 
+<div class="parent-container">
+
+  <div class="flex-container2">
+    <div class="flex-item">Item A</div>
+    <div class="flex-item">Item B</div>
+    <div class="flex-item">Item C</div>
+    <div id="three-body"></div> 
+</div>
+
+
+  <div class="flex-container">
+      <div class="header"> 
+        <div id="title">Design Forum</div>
+
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+      </div>
+      <div class="flex-item">Item 2</div>
+      <div class="flex-item">Item 3</div>
+  </div>
+
+</div>
+
+
+
 <div class="flexbox">
     <div class="flex-container">
     <h1 id="hello">DESIGN FORUM</h1>
 
-   <div id="three-body"></div> 
+   
    <h4> *hint* move the orb around</h4>
     </div>
 </div>
