--- a/html/blog.html
+++ b/html/blog.html
@@ -88,9 +88,36 @@
 <div class="parent-container">
 
   <div class="flex-container2">
-    <div class="flex-item">Item A</div>
-    <div class="flex-item">Item B</div>
-    <div class="flex-item">Item C</div>
+
+    <div class="icon">
+      <img src="../media/images/icon-cd.png">
+      <div class="popup" onclick="showPopup('popup-05')">
+          <span class="popuptext" id="popup-05">
+              <!-- <img src="media/images/popup-05.png" alt="Popup Image"> -->
+          </span>
+      </div>
+  </div>
+
+  <div class="icon">
+    <img src="../media/images/icon-paper.png">
+    <div class="popup" onclick="showPopup('popup-05')">
+        <span class="popuptext" id="popup-05">
+            <!-- <img src="media/images/popup-05.png" alt="Popup Image"> -->
+        </span>
+    </div>
+</div>
+
+<div class="icon">
+  <img src="../media/images/icons-19.png">
+  <div class="popup" onclick="showPopup('popup-05')">
+      <span class="popuptext" id="popup-05">
+          <!-- <img src="media/images/popup-05.png" alt="Popup Image"> -->
+      </span>
+  </div>
+</div>
+  
+
+
     
 </div>
 
