--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <style>
     body {
-      background-color: #f5d9c6;
+      background-color: whitesmoke;
     }
     </style> 
 
@@ -76,17 +76,20 @@
 </div>
  
 
-<div class="parent-container">
-
-  <div class="flex-container2">
-    <div class="flex-item">Item A</div>
-    <div class="flex-item">Item B</div>
-    <div class="flex-item">Item C</div>
-    <div id="three-body"></div> 
+<div class="flex-container">
+   
+  <div class="flexbox">
+<h1 id="hello">DESIGN FORUM.</h1>
 </div>
+<div id="three-body"></div> 
 
 
-  <div class="flex-container">
+
+<h2>a graphic design community</h2>
+<h3>for designers, by designers</h3>
+
+
+  <!-- <div class="flex-container">
       <div class="header"> 
         <div id="title">Design Forum</div>
 
@@ -95,7 +98,7 @@
       </div>
       <div class="flex-item">Item 2</div>
       <div class="flex-item">Item 3</div>
-  </div>
+  </div> -->
 
 </div>
 
