--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9+Charted&family=Major+Mono+Display&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
 
    <script type="importmap">
     {
@@ -59,7 +61,7 @@
 <body>
   <style>
     body {
-      background-color: whitesmoke;
+      background-color:lightgray;
     }
     </style> 
 
@@ -76,49 +78,31 @@
 </div>
  
 
+
+
+<div class="parent-container">
+
+
+
+<div class="flex-container2">
+  <div id="flexitem">hi</div>
+</div>
+
 <div class="flex-container">
    
-  <div class="flexbox">
-<h1 id="hello">DESIGN FORUM.</h1>
+<div id="hello">Visual Design Forum</h1>
+  <h2><i>have a heart to heart with someone you know.</i></h2>
+  <h3>why do things change so much when we get older? <i>i don't know</i></h3>
 </div>
 <div id="three-body"></div> 
 
-
-
-<h2>a graphic design community</h2>
-<h3>for designers, by designers</h3>
-
-
-  <!-- <div class="flex-container">
-      <div class="header"> 
-        <div id="title">Design Forum</div>
-
-
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-      </div>
-      <div class="flex-item">Item 2</div>
-      <div class="flex-item">Item 3</div>
-  </div> -->
-
 </div>
 
 
 
-<div class="flexbox">
-    <div class="flex-container">
-    <h1 id="hello">DESIGN FORUM</h1>
 
-   
-   <h4> *hint* move the orb around</h4>
-    </div>
-</div>
 
-    
-   <div class="flex-container2">
-    <h2>a graphic design community</h2>
 
-    <!-- <h3>for designers, by designers</h3> -->
-</div>
 
 
 
