--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 
 
 <div class="flex-container2">
-  <div id="flexitem">hi</div>
+  <div id="clouds">
+    <!-- <img src="media/images/clouds.jpeg"> -->
+  </div>
 </div>
 
 <div class="flex-container">
@@ -96,6 +98,7 @@
 </div>
 <div id="three-body"></div> 
 
+</div>
 </div>
 
 
