--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap" rel="stylesheet">
 
    <script type="importmap">
     {
@@ -59,43 +62,39 @@
 
 </head>
 <body>
-  <style>
+  <!-- <style>
     body {
-      background-color:lightgray;
+      background-image: url('media/images/gradietn-pinkorange.png');
     }
-    </style> 
+    </style>  -->
 
 
 
- <div class="flex-container3">
-  <a href="html/archive.html" id="archive">archive</a>
-
-  <a href="html/about.html" id="about">about</a>
-
-  <a href="html/blog.html" id="blog">blog</a>
-
-  
-</div>
- 
 
 
 
 <div class="parent-container">
 
+  <div class="flex-container3">
+    <a href="html/archive.html" id="archive">archive</a>
+  
+    <a href="html/about.html" id="about">about</a>
+  
+    <a href="html/blog.html" id="blog">blog</a>
+  
+    
+  </div> 
+   
 
 
-<div class="flex-container2">
-  <div id="clouds">
-    <!-- <img src="media/images/clouds.jpeg"> -->
-  </div>
-</div>
 
 <div class="flex-container">
-   
-<div id="hello">Visual Design Forum</h1>
-  <h2><i>have a heart to heart with someone you know.</i></h2>
-  <h3>why do things change so much when we get older? <i>i don't know</i></h3>
-</div>
+
+  
+<h1>Visual Design Forum</h1>
+<h3>WELCOME!</h3>
+<h2>design forum is a place for designers to inspire each other...</h2>
+
 <div id="three-body"></div> 
 
 </div>
