--- a/html/about.html
+++ b/html/about.html
@@ -3,17 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
-    <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script src="path/to/splitting.min.js"></script>
-    <link rel="stylesheet" href="path/to/splitting.css">
-    <script src="path/to/gsap.min.js"></script>
-    <script src="path/to/ScrollTrigger.min.js"></script>
-
-
+    <title>design forum</title>
    <link rel="stylesheet" href="../css/about.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +41,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9+Charted&family=Major+Mono+Display&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9+Charted&family=Major+Mono+Display&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap" rel="stylesheet">
 
    <script type="importmap">
     {
@@ -64,15 +62,58 @@
 
 </head>
 <body>
+  <style>
+    body {
+      background-image: url('../media/images/gradient-grain.png');
+    }
+    </style> 
+
+
+
+
+
+
+<div class="parent-container">
+
+  <div class="flex-container3">
+    <a href="html/archive.html" id="archive">archive</a>
+  
+    <a href="html/index.html" id="about">home</a>
+  
+    <a href="html/blog.html" id="blog">blog</a>
+  
+    
+  </div> 
    
+
+
+
+<div class="flex-container">
+
   
-  
+<!-- <h1>Visual Design Forum</h1> -->
+<!-- <h2>Welcome</h2> -->
+
+<div id="three-body"></div> 
+
+</div>
+</div>
 
 
 
 
-    <script src="../js/about.js" type="module"></script>
-    <!-- <script src="js/script.js" type="module"></script>
-    <script src="js/main.js" type="module"></script> -->
+
+
+
+
+
+
+
+ 
+
+
+    
+    <!-- <script src="js/script.js" type="module"></script> -->
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
