--- a/html/blog.html
+++ b/html/blog.html
@@ -68,11 +68,11 @@
 <body>
   <style>
     body {
-      background-color: #f5d9c6;
+      background-color: lightblue;
     }
     </style> 
 
-
+<div class="parent-container">
 
  <div class="flex-container3">
   <a href="../html/archive.html" id="archive">archive</a>
@@ -85,9 +85,9 @@
 </div>
  
 
-<div class="parent-container">
 
-  <div class="flex-container2">
+
+  <!-- <div class="flex-container2">
 
     <div class="icon">
       <img src="../media/images/icon-cd.png">
@@ -119,7 +119,7 @@
 
 
     
-</div>
+</div> -->
 
 
   <div class="flex-container">
@@ -184,7 +184,7 @@ The graphic design landscape is ever-evolving, with new trends emerging regularl
 
 </div>
 
-
+</div>
 
 
 
@@ -201,7 +201,7 @@ The graphic design landscape is ever-evolving, with new trends emerging regularl
   </script>
 
  
-
+>
 
     
     <script src="../js/blog.js" type="module"></script>
