--- a/html/about.html
+++ b/html/about.html
@@ -64,7 +64,7 @@
 <body>
   <style>
     body {
-      background-image: url('../media/images/gradient-grain.png');
+      background-image: url('../media/images/gradient.png');
     }
     </style> 
 
@@ -76,11 +76,11 @@
 <div class="parent-container">
 
   <div class="flex-container3">
-    <a href="html/archive.html" id="archive">archive</a>
+    <a href="../html/archive.html" id="archive">archive</a>
   
-    <a href="html/index.html" id="about">home</a>
+    <a href="../html/index.html" id="about">home</a>
   
-    <a href="html/blog.html" id="blog">blog</a>
+    <a href="../html/blog.html" id="blog">blog</a>
   
     
   </div> 
