--- a/html/archive.html
+++ b/html/archive.html
@@ -64,7 +64,7 @@
     }
     </style>
 
-
+<div class="parent-container">
   <div class="flex-container3">
     <a href="../index.html" id="archive">home</a>
   
@@ -76,7 +76,7 @@
   </div>
    
 
-  <div class="flexbox">
+  
     <div class="flex-container">
     <h1 id="hello">It's all up to you!</h1>
     <div id="square"></div>
@@ -102,11 +102,11 @@
 
 
 
+
+
+
+
 </div>
-
-
-
-
 
 
 
