--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
   
 <h1>Visual Design Forum</h1>
 <h3>WELCOME!</h3>
-<h2>design forum is a place for designers to inspire each other...</h2>
+<h2>𓃗DESIGN FORUM is a place for designers to inspire each other...</h2>
+<h4><i>✰hint✰</i> move the butterfly around</h4>
 
 <div id="three-body"></div> 
 
