--- a/html/about.html
+++ b/html/about.html
@@ -61,12 +61,12 @@
   </script>
 
 </head>
-<body>
+<!-- <body>
   <style>
     body {
-      background-image: url('../media/images/gradient.png');
+      background-image: url('../media/images/background-4.jpg');
     }
-    </style> 
+    </style>  -->
 
 
 
@@ -75,10 +75,43 @@
 
 <div class="parent-container">
 
+ 
+    <div class="scrollbar">
+        <div class="scrollbar-inner">
+            design forum is a place for designers to share ideas, resources, and inspiration.
+        </div>
+
+        <div class="scrollbar-inner2">
+            ೕ(˃̵ᴗ˂̵ ๑)
+        </div>
+
+        <div class="scrollbar-inner3">
+          design is for everyone!
+        </div>
+
+        <div class="scrollbar-inner4">
+            !(•̀ᴗ•́)و ̑̑
+        </div>
+
+        <div class="scrollbar-inner5">
+            ⊂(◉‿◉)つ
+        </div>
+
+        <div class="scrollbar-inner6">
+            ૮꒰ ˶• ༝ •˶꒱ა ♡
+        </div>
+
+        <div class="scrollbar-inner7">
+           design is fun(♥‿♥)
+        </div>
+
+
+    </div>
+
   <div class="flex-container3">
     <a href="../html/archive.html" id="archive">archive</a>
   
-    <a href="../html/index.html" id="about">home</a>
+    <a href="../index.html" id="about">home</a>
   
     <a href="../html/blog.html" id="blog">blog</a>
   
@@ -89,8 +122,11 @@
 
 
 <div class="flex-container">
+<header>ABOUT...</header>
 
-  
+    <!-- <img id="image-desktop"
+    src="../media/images/desktop.jpg"> -->
+
 <!-- <h1>Visual Design Forum</h1> -->
 <!-- <h2>Welcome</h2> -->
 
@@ -114,6 +150,6 @@
 
     
     <!-- <script src="js/script.js" type="module"></script> -->
-    <script src="js/main.js" type="module"></script>
+    <script src="../js/about.js" type="module"></script>
 </body>
 </html>
