--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
 <div id="three-body"></div> 
 
 </div>
+
+<div class="flex-container2">
+
+  <img id="image-desktop"
+  src="media/images/desktop.jpg">
+
+</div>
+
+
+
+
 </div>
 
 
