--- a/html/archive.html
+++ b/html/archive.html
@@ -90,6 +90,9 @@
    <div id="square3"></div>
    <div id="square4"></div>
    <div id="square5"></div>
+   <div id="square6"></div>
+   <div id="square7"></div>
+
   
 </div>
 
