--- a/html/about.html
+++ b/html/about.html
@@ -78,9 +78,9 @@
  
     <div class="scrollbar">
         <div class="scrollbar-inner">
-            design forum is a place for designers to share ideas, resources, and inspiration.
+            design forum is a place for designers to share ideas, resources, and inspiration.    ೕ(˃̵ᴗ˂̵ ๑)  design is for everyone!  !(•̀ᴗ•́)و ̑̑ ⊂(◉‿◉)つ  ૮꒰ ˶• ༝ •˶꒱ა ♡  design is fun(♥‿♥)
         </div>
-
+<!-- 
         <div class="scrollbar-inner2">
             ೕ(˃̵ᴗ˂̵ ๑)
         </div>
@@ -103,7 +103,7 @@
 
         <div class="scrollbar-inner7">
            design is fun(♥‿♥)
-        </div>
+        </div> -->
 
 
     </div>
