--- a/html/blog.html
+++ b/html/blog.html
@@ -200,7 +200,33 @@ Career Advice & Networking:</b> Whether you’re freelancing, job hunting, or lo
     </div>
 </div>
 
+<div class="icon2">
+  <!-- <img src="../media/images/icon-cd.png"> -->
+  <div class="popup" onclick="showPopup('popup-05')">click
+      <span class="popuptext" id="popup-05">
+          <img src="../media/images/popup-05.png" alt="Popup Image">
+      </span>
+  </div>
+</div>
 
+<div class="icon3">
+  <!-- <img src="../media/images/icon-cd.png"> -->
+  <div class="popup" onclick="showPopup('popup-05')">click
+      <span class="popuptext" id="popup-05">
+          <img src="../media/images/popup-05.png" alt="Popup Image">
+      </span>
+  </div>
+</div>
+
+
+<div class="icon4">
+  <!-- <img src="../media/images/icon-cd.png"> -->
+  <div class="popup" onclick="showPopup('popup-05')">click
+      <span class="popuptext" id="popup-05">
+          <img src="../media/images/popup-05.png" alt="Popup Image">
+      </span>
+  </div>
+</div>
 
 
 
@@ -230,7 +256,7 @@ Career Advice & Networking:</b> Whether you’re freelancing, job hunting, or lo
   <div class="header"> 
     <div id="title">blog hub!</div>
 
-
+<h3>post here</h3>
 
   </div>
   <div class="flex-item">
