--- a/html/about.html
+++ b/html/about.html
@@ -61,12 +61,12 @@
   </script>
 
 </head>
-<!-- <body>
+<body>
   <style>
     body {
-      background-image: url('../media/images/background-4.jpg');
+      background-image: url('../media/images/color-fill.png');
     }
-    </style>  -->
+    </style> 
 
 
 
@@ -75,11 +75,11 @@
 
 <div class="parent-container">
 
- 
+<!--  
     <div class="scrollbar">
         <div class="scrollbar-inner">
             design forum is a place for designers to share ideas, resources, and inspiration.    ೕ(˃̵ᴗ˂̵ ๑)  design is for everyone!  !(•̀ᴗ•́)و ̑̑ ⊂(◉‿◉)つ  ૮꒰ ˶• ༝ •˶꒱ა ♡  design is fun(♥‿♥)
-        </div>
+        </div> -->
 <!-- 
         <div class="scrollbar-inner2">
             ೕ(˃̵ᴗ˂̵ ๑)
@@ -122,7 +122,7 @@
 
 
 <div class="flex-container">
-<header>ABOUT...</header>
+<header>ABOUT</header>
 
     <!-- <img id="image-desktop"
     src="../media/images/desktop.jpg"> -->
@@ -130,7 +130,7 @@
 <!-- <h1>Visual Design Forum</h1> -->
 <!-- <h2>Welcome</h2> -->
 
-<div id="three-body"></div> 
+<!-- <div id="three-body"></div>  -->
 
 </div>
 </div>
