--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="flex-container3">
     <a href="html/archive.html" id="archive">archive</a>
   
-    <a href="html/about.html" id="about">about</a>
+    <!-- <a href="html/about.html" id="about">about</a> -->
   
     <a href="html/blog.html" id="blog">blog</a>
   
@@ -93,7 +93,7 @@
   
 <h1>Visual Design Forum</h1>
 <h3>WELCOME!</h3>
-<h2>𓃗DESIGN FORUM is a place for designers to inspire each other...</h2>
+<h2>𓃗DESIGN FORUM is a place for designers to inspire each other...⤹</h2>
 <h4><i>✰hint✰</i> move the butterfly around</h4>
 
 <div id="three-body"></div> 
