--- a/html/archive.html
+++ b/html/archive.html
@@ -58,11 +58,11 @@
 </head>
 <body>
 
-  <style>
+  <!-- <style>
     body {
       background-color: #C8EAE7;
     }
-    </style>
+    </style> -->
 
 <div class="parent-container">
   <div class="flex-container3">
@@ -78,12 +78,12 @@
 
   
     <div class="flex-container">
-    <h1 id="hello">It's all up to you!</h1>
+    <h1 id="hello">Design Forum</h1>
     <div id="square"></div>
 
    <div id="three-body"></div> 
 
-   <h2>Just remember that</h2>
+   <h2>Official Archive of the</h2>
 
    <div id="square1"></div>
    <div id="square2"></div>
@@ -92,14 +92,17 @@
    <div id="square5"></div>
    <div id="square6"></div>
    <div id="square7"></div>
+   <div id="square8"></div>
+   <div id="square9"></div>
+   <div id="square10"></div>
 
   
 </div>
 
 <div class="flex-container2">
-  <h3>even if you wish you were someone else...</h3>
+  <h3>Scan through our library of</h3>
   <br>
-  <h3>you can still move th CD with your mouse</h3>
+  <h3>design history</h3>
 </div>
 
 
