--- a/html/about.html
+++ b/html/about.html
@@ -62,11 +62,11 @@
 
 </head>
 <body>
-  <style>
+  <!-- <style>
     body {
       background-image: url('../media/images/color-fill.png');
     }
-    </style> 
+    </style>  -->
 
 
 
@@ -106,8 +106,7 @@
         </div> -->
 
 
-    </div>
-
+   
   <div class="flex-container3">
     <a href="../html/archive.html" id="archive">archive</a>
   
@@ -119,24 +118,26 @@
   </div> 
    
 
-
-
 <div class="flex-container">
-<header>ABOUT</header>
+<header>About</header>
+</div>
+
+<div class="flex-container2">
+    <!-- <header>About</header> -->
+
 
     <!-- <img id="image-desktop"
-    src="../media/images/desktop.jpg"> -->
+    src="../media/images/desktop.jpg">  -->
 
-<!-- <h1>Visual Design Forum</h1> -->
-<!-- <h2>Welcome</h2> -->
 
-<!-- <div id="three-body"></div>  -->
+
+<div id="three-body"></div> 
 
 </div>
 </div>
 
 
-
+</body>
 
 
 
