--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
 </head>
 <body>
-  <!-- <style>
+  <style>
     body {
-      background-image: url('media/images/gradietn-pinkorange.png');
+      background-image: url('media/images/gradient.png');
     }
-    </style>  -->
+    </style> 
 
 
 
@@ -104,12 +104,12 @@
 
 
 
-<div class="flex-container2">
+<!-- <div class="flex-container2">
 
   <img id="image-desktop"
   src="media/images/desktop.jpg">
 
-</div>
+</div> -->
 
 
 
