--- a/html/archive.html
+++ b/html/archive.html
@@ -58,17 +58,17 @@
 </head>
 <body>
 
-  <!-- <style>
+  <style>
     body {
       background-color: #C8EAE7;
     }
-    </style> -->
+    </style>
 
 <div class="parent-container">
   <div class="flex-container3">
     <a href="../index.html" id="archive">home</a>
   
-    <a href="../html/about.html" id="about">about</a>
+    <!-- <a href="../html/about.html" id="about">about</a> -->
   
     <a href="../html/blog.html" id="blog">blog</a>
   
@@ -95,7 +95,10 @@
    <div id="square8"></div>
    <div id="square9"></div>
    <div id="square10"></div>
-
+   <div id="square11"></div>
+   <div id="square12"></div>
+   <div id="square13"></div>
+   <div id="square14"></div>
   
 </div>
 
