--- a/html/blog.html
+++ b/html/blog.html
@@ -91,7 +91,7 @@
  <div class="flex-container3">
   <a href="../html/archive.html" id="archive">archive</a>
 
-  <a href="../html/about.html" id="about">about</a>
+  <!-- <a href="../html/about.html" id="about">about</a> -->
 
   <a href="../index.html" id="blog">home</a>
 
