--- a/html/archive.html
+++ b/html/archive.html
@@ -44,7 +44,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
    <script type="importmap">
     {
@@ -57,12 +59,11 @@
 
 </head>
 <body>
-
-  <style>
-    body {
-      background-color: #C8EAE7;
-    }
-    </style>
+<style>
+  body {
+    background-image: url('../media/images/flowers-bg.png');
+  }
+  </style>
 
 <div class="parent-container">
   <div class="flex-container3">
@@ -99,20 +100,31 @@
    <div id="square12"></div>
    <div id="square13"></div>
    <div id="square14"></div>
+   <div id="square15"></div>
+   <div id="square16"></div>
+   <div id="square17"></div>
+   <div id="square18"></div>
+   <div id="square19"></div>
+   <div id="square20"></div>
   
 </div>
 
 <div class="flex-container2">
-  <h3>Scan through our library of</h3>
+  <h3><i>Scan through our library of</i></h3>
   <br>
-  <h3>design history</h3>
+  <h3><i>design history</i></h3>
 </div>
 
 
+<div class="flex-container4">
+  <h4>Our Graphic Design Archive serves as a valuable resource for preserving and showcasing the evolution of visual communication. It houses a comprehensive collection of design works, including logos, branding materials, posters, brochures, websites, and digital art, often spanning decades or even centuries. This archive can offer insights into the changing aesthetics, techniques, and trends that have shaped the industry, providing inspiration and education for designers, students, and historians alike
+
+    <br><br>
+    By cataloging influential works from renowned designers and agencies, as well as experimental projects from emerging artists, a graphic design archive becomes a reference point for understanding the social, cultural, and technological shifts that influence design. It allows users to study typography, color theory, layout principles, and design systems from various eras, encouraging a deeper appreciation for the craft. Additionally, it can serve as a tool for future innovation by offering access to timeless designs that continue to inspire new generations of creatives.
+  </h4>
 
 
-
-
+</div>
 
 
 </div>
