--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
 </head>
 <body>
-  <style>
+  <!-- <style>
     body {
-      background-image: url('media/images/gradient.png');
+      background-image: url('media/images/design-forumm-bg.png');
     }
-    </style> 
+    </style>  -->
 
 
 
@@ -89,17 +89,29 @@
 
 
 <div class="flex-container">
-
+ 
   
 <h1>Visual Design Forum</h1>
-<h3>WELCOME!</h3>
-<h2>𓃗DESIGN FORUM is a place for designers to inspire each other...⤹</h2>
-<h4><i>✰hint✰</i> move the butterfly around</h4>
-
+<!-- <h3>WELCOME!</h3>
+<h4><i>✰hint✰</i> move the butterfly around</h4> -->
 <div id="three-body"></div> 
+
+
+<div class="flex-container2">
+
+<div class="scrollbox">
+<h2>𓃗DESIGN FORUM is a place for designers to inspire each other...
+Check out our blog to see posts from fellow designers filled with ideas, resources, and inspiration.
+fill with placeholder text </h2>
+
 
 </div>
 
+
+
+
+</div>
+</div>
 
 
 
