--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
 <!-- <h3>WELCOME!</h3>
 <h4><i>✰hint✰</i> move the butterfly around</h4> -->
 <div id="three-body"></div> 
-
+<div id="nature1">
+  <img src="media/images/nature1.png" alt="nature1">
+</div>
+  
 
 <div class="flex-container2">
 
