--- a/html/archive.html
+++ b/html/archive.html
@@ -80,6 +80,7 @@
   
     <div class="flex-container">
     <h1 id="hello">Design Forum</h1>
+    <h5><i>✰hint✰</i> move the CD around</h5>
     <div id="square"></div>
 
    <div id="three-body"></div> 
