--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
 </head>
 <body>
-  <!-- <style>
+  <style>
     body {
-      background-image: url('media/images/design-forumm-bg.png');
+      background-image: url('media/images/design-forum-bg2.png');
     }
-    </style>  -->
+    </style> 
 
 
 
@@ -74,13 +74,16 @@
 
 
 <div class="parent-container">
-
+  <div class ="flex-container2">
+    <h1>Visual Design Forum</h1>
+  </div>
+  
   <div class="flex-container3">
-    <a href="html/archive.html" id="archive">archive</a>
+    <a href="html/archive.html" id="archive">Archive</a>
   
     <!-- <a href="html/about.html" id="about">about</a> -->
   
-    <a href="html/blog.html" id="blog">blog</a>
+    <a href="html/blog.html" id="blog">Blog</a>
   
     
   </div> 
@@ -90,18 +93,35 @@
 
 <div class="flex-container">
  
-  
-<h1>Visual Design Forum</h1>
-<!-- <h3>WELCOME!</h3>
-<h4><i>✰hint✰</i> move the butterfly around</h4> -->
+  <!-- <div id="apple">
+    <img src="media/images/apple.png" alt="apple">
+  </div> -->
+
+<h3>WELCOME!</h3>
+<h4><i>✰hint✰</i> move the butterfly around</h4>
 <div id="three-body"></div> 
 <div id="nature1">
   <img src="media/images/nature1.png" alt="nature1">
 </div>
-  
+<div id="nature2">
+  <img src="media/images/nature1.png" alt="nature2">
+ </div> 
+ <div id="heart">
+  <div id="eye1"></div>
+  <div id="eye2"></div>
+  <div id="pupil1"></div>
+  <div id="pupil2"></div>
+ </div>
 
-<div class="flex-container2">
 
+
+
+ <!-- <div id="nature3">
+  <img src="media/images/nature2.png" alt="nature2">
+ </div>  -->
+
+<!-- <div class="flex-container2">
+<div id="heart"></div>
 <div class="scrollbox">
 <h2>𓃗DESIGN FORUM is a place for designers to inspire each other...
 Check out our blog to see posts from fellow designers filled with ideas, resources, and inspiration.
@@ -113,18 +133,12 @@ fill with placeholder text </h2>
 
 
 
-</div>
-</div>
-
-
-
-
-<!-- <div class="flex-container2">
-
-  <img id="image-desktop"
-  src="media/images/desktop.jpg">
 
 </div> -->
+
+
+
+
 
 
 
