--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
 
 
 <div class="parent-container">
+
   <div class ="flex-container2">
     <h1>Visual Design Forum</h1>
+    <div id="nature3">
+      <img src="media/images/nature2.png" alt="nature2"></div>
   </div>
   
   <div class="flex-container3">
@@ -92,7 +95,7 @@
 
 
 <div class="flex-container">
- 
+  <div id="circle1"></div>
   <!-- <div id="apple">
     <img src="media/images/apple.png" alt="apple">
   </div> -->
@@ -106,15 +109,18 @@
 <div id="nature2">
   <img src="media/images/nature1.png" alt="nature2">
  </div> 
+ <div id="nature3">
+  <img src="media/images/nature2.png" alt="nature2"></div>
  <div id="heart">
   <div id="eye1"></div>
   <div id="eye2"></div>
   <div id="pupil1"></div>
   <div id="pupil2"></div>
  </div>
-
-
-
+<!-- 
+<h5>Forum</h5>
+<h6>Design</h6>
+<h7>Visual</h7> -->
 
  <!-- <div id="nature3">
   <img src="media/images/nature2.png" alt="nature2">
