--- a/html/about.html
+++ b/html/about.html
@@ -62,11 +62,11 @@
 
 </head>
 <body>
-  <!-- <style>
+  <style>
     body {
-      background-image: url('../media/images/color-fill.png');
+      background-color: lightpink;
     }
-    </style>  -->
+    </style> 
 
 
 
@@ -75,35 +75,7 @@
 
 <div class="parent-container">
 
-<!--  
-    <div class="scrollbar">
-        <div class="scrollbar-inner">
-            design forum is a place for designers to share ideas, resources, and inspiration.    ೕ(˃̵ᴗ˂̵ ๑)  design is for everyone!  !(•̀ᴗ•́)و ̑̑ ⊂(◉‿◉)つ  ૮꒰ ˶• ༝ •˶꒱ა ♡  design is fun(♥‿♥)
-        </div> -->
-<!-- 
-        <div class="scrollbar-inner2">
-            ೕ(˃̵ᴗ˂̵ ๑)
-        </div>
 
-        <div class="scrollbar-inner3">
-          design is for everyone!
-        </div>
-
-        <div class="scrollbar-inner4">
-            !(•̀ᴗ•́)و ̑̑
-        </div>
-
-        <div class="scrollbar-inner5">
-            ⊂(◉‿◉)つ
-        </div>
-
-        <div class="scrollbar-inner6">
-            ૮꒰ ˶• ༝ •˶꒱ა ♡
-        </div>
-
-        <div class="scrollbar-inner7">
-           design is fun(♥‿♥)
-        </div> -->
 
 
    
@@ -117,26 +89,18 @@
     
   </div> 
    
-
-<div class="flex-container">
-<header>About</header>
-</div>
-
 <div class="flex-container2">
-    <!-- <header>About</header> -->
+  <h1>ABOUT US</h1>
+  <h2>ABOUT US</h2>
+  <h3>ABOUT US</h3>
+  <h4>ABOUT US</h4>
 
 
-    <!-- <img id="image-desktop"
-    src="../media/images/desktop.jpg">  -->
-
-
-
-<div id="three-body"></div> 
-
-</div>
 </div>
 
 
+
+</div>
 </body>
 
 
