--- a/html/blog.html
+++ b/html/blog.html
@@ -69,7 +69,7 @@
 <body>
   <style>
     body {
-      background-color: #6F4E37;
+      background-image: url('../media/images/pink-paper.png');
     }
     </style>
 
@@ -91,7 +91,7 @@
  <div class="flex-container3">
   <a href="../html/archive.html" id="archive">archive</a>
 
-  <!-- <a href="../html/about.html" id="about">about</a> -->
+  <a href="../html/about.html" id="about">about</a>
 
   <a href="../index.html" id="blog">home</a>
 
