--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <div class="flex-container3">
     <a href="html/archive.html" id="archive">Archive</a>
   
-    <!-- <a href="html/about.html" id="about">about</a> -->
+    <a href="html/about.html" id="about">about</a>
   
     <a href="html/blog.html" id="blog">Blog</a>
   
@@ -101,7 +101,7 @@
   </div> -->
 
 <h3>WELCOME!</h3>
-<h4><i>✰hint✰</i> move the butterfly around</h4>
+<h4><i>✰hint✰</i> move the butterfly around!</h4>
 <div id="three-body"></div> 
 <div id="nature1">
   <img src="media/images/nature1.png" alt="nature1">
