--- a/html/archive.html
+++ b/html/archive.html
@@ -69,7 +69,7 @@
   <div class="flex-container3">
     <a href="../index.html" id="archive">home</a>
   
-    <!-- <a href="../html/about.html" id="about">about</a> -->
+    <a href="../html/about.html" id="about">about</a>
   
     <a href="../html/blog.html" id="blog">blog</a>
   
