--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <body>
   <style>
     body {
-      background-image: url('media/images/design-forum-bg2.png');
+      background-image: url('../media/images/flowers-bg.png');
     }
-    </style> 
+    </style>
 
 
 
@@ -116,6 +116,15 @@
   <div id="eye2"></div>
   <div id="pupil1"></div>
   <div id="pupil2"></div>
+
+<div id="nightsky">
+  <img src="media/images/nightsky.png" alt="nightsky">
+  </div>
+
+
+
+
+
  </div>
 <!-- 
 <h5>Forum</h5>
