--- a/html/about.html
+++ b/html/about.html
@@ -65,6 +65,7 @@
   <style>
     body {
       background-color: lightpink;
+      background-image: url('../media/images/pink-colorburn.png');
     }
     </style> 
 
@@ -93,12 +94,34 @@
   <h1>ABOUT US</h1>
   <h2>ABOUT US</h2>
   <h3>ABOUT US</h3>
-  <h4>ABOUT US</h4>
-
+  <h4>ABOUT US*</h4>
+<div id="computer">
+  <img src="../media/images/computer-mu.png" alt="computer">
+</div>
+<div id="folder">
+  <img src="../media/images/folder.png" alt="folder" width="80" height="60">
+</div>
+<div id="folder2">
+  <img src="../media/images/folder.png" alt="folder" width="80" height="60">
+</div>
+<div id="folder3">
+  <img src="../media/images/folder.png" alt="folder" width="80" height="60">
+</div>
+<div id="folder4">
+  <img src="../media/images/folder.png" alt="folder" width="80" height="60">
+</div>
 
 </div>
 
+<!-- <div class="flex-container">
+<div id="computer">
+  <img src="../media/images/computer-mu.png" alt="computer">
+</div>
+<div id="folder">
+  <img src="../media/images/folder.png" alt="folder" width="80" height="60">
+</div>
 
+</div> -->
 
 </div>
 </body>
