--- a/html/archive.html
+++ b/html/archive.html
@@ -84,8 +84,8 @@
   
     <div class="flex-container">
     <h1 id="hello">Design Forum</h1>
-    <h5><i>✰hint✰</i> move the CD around</h5>
-  
+    <h5><i>✰hint✰</i> move the CD around to view more</h5>
+  <h6>✰photos were supplied from the people's graphic design archive</h6>
 
    <div id="three-body"></div> 
 
