--- a/html/archive.html
+++ b/html/archive.html
@@ -84,8 +84,8 @@
   
     <div class="flex-container">
     <h1 id="hello">Design Forum</h1>
-    <h5><i>✰hint✰</i> move the CD around to view more</h5>
-  <h6>✰photos were supplied from the people's graphic design archive</h6>
+    <h5><i>✰hint✰ </i> click to move the CD around and view more</h5>
+  <h6>photos were supplied from the people's graphic design archive</h6>
 
    <div id="three-body"></div> 
 
@@ -163,7 +163,7 @@
 <div class="flex-container2">
   <h3><i>Scan through our library of</i></h3>
   <br>
-  <h3><i>design history</i></h3>
+  <h3><i>design history→</i></h3>
 </div>
 
 
