--- a/html/about.html
+++ b/html/about.html
@@ -90,7 +90,7 @@
     
   </div> 
    
-<div class="flex-container2">
+<!-- <div class="flex-container2">
   <h1>ABOUT US</h1>
   <h2>ABOUT US</h2>
   <h3>ABOUT US</h3>
@@ -111,17 +111,9 @@
   <img src="../media/images/folder.png" alt="folder" width="80" height="60">
 </div>
 
-</div>
-
-<!-- <div class="flex-container">
-<div id="computer">
-  <img src="../media/images/computer-mu.png" alt="computer">
-</div>
-<div id="folder">
-  <img src="../media/images/folder.png" alt="folder" width="80" height="60">
-</div>
-
 </div> -->
+
+
 
 </div>
 </body>
