--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
    <script type="importmap">
     {
       "imports": {
@@ -64,7 +72,7 @@
 <body>
   <style>
     body {
-      background-image: url('../media/images/flowers-bg.png');
+      background-image: url('media/images/blue-paper.png');
     }
     </style>
 
@@ -75,51 +83,41 @@
 
 <div class="parent-container">
 
-  <div class ="flex-container2">
-    <h1>Visual Design Forum</h1>
-    <div id="nature3">
-      <img src="media/images/nature2.png" alt="nature2"></div>
-  </div>
+ 
+
   
   <div class="flex-container3">
     <a href="html/archive.html" id="archive">Archive</a>
   
-    <a href="html/about.html" id="about">about</a>
+    <a href="html/about.html" id="about">About</a>
   
     <a href="html/blog.html" id="blog">Blog</a>
   
     
   </div> 
    
+  <div class ="flex-container2">
+    <p>fill with placeholder text continue sijubfkjflfkeln</p>
+    <h1>Visual Design Forum</h1>
+<h2><i>designforum.com</i></h2>
 
 
-
-<div class="flex-container">
-  <div id="circle1"></div>
+<!-- <div class="flex-container">
+  <div id="circle1"></div> -->
   <!-- <div id="apple">
     <img src="media/images/apple.png" alt="apple">
   </div> -->
 
-<h3>WELCOME!</h3>
-<h4><i>✰hint✰</i> move the butterfly around!</h4>
+
+<!-- <h4><i>✰hint✰</i> move the butterfly around!</h4> -->
 <div id="three-body"></div> 
-<div id="nature1">
-  <img src="media/images/nature1.png" alt="nature1">
-</div>
-<div id="nature2">
-  <img src="media/images/nature1.png" alt="nature2">
- </div> 
- <div id="nature3">
-  <img src="media/images/nature2.png" alt="nature2"></div>
- <div id="heart">
+
+
+ <!-- <div id="heart">
   <div id="eye1"></div>
   <div id="eye2"></div>
   <div id="pupil1"></div>
-  <div id="pupil2"></div>
-
-<div id="nightsky">
-  <img src="media/images/nightsky.png" alt="nightsky">
-  </div>
+  <div id="pupil2"></div> -->
 
 
 
@@ -151,7 +149,15 @@ fill with placeholder text </h2>
 
 </div> -->
 
+<div class="bottom-header">
+  <a href="html/archive.html" id="archive">Archive</a>
 
+  <a href="html/about.html" id="about">About</a>
+
+  <a href="html/blog.html" id="blog">Blog</a>
+
+  
+</div> 
 
 
 
